envoy.yaml
static_resources:
  listeners:
  - name: listener
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 8080
    filter_chains:
      - filters:
        - name: envoy.http_connection_manager
          typed_config:
            '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
            stat_prefix: test
            codec_type: AUTO
            http_filters:
              - name: wasm filter
                typed_config:
                  '@type': "type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm"
                  config:
                    name: anything
                    vm_config:
                      runtime: envoy.wasm.runtime.v8
                      code:
                        local:
                          filename: /srv/sandbox.wasm
              - name: envoy.filters.http.router
            route_config:
              name: example
              virtual_hosts:
              - name: vh
                domains: 
                - '*'
                routes:
                  - name: default
                    match: 
                      prefix: /
                    route: 
                      cluster: httpbin

  clusters:
    - name: httpbin
      connect_timeout: 0.25s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: httpbin
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: httpbin
                      port_value: 80

admin:
  access_log_path: /dev/null
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901

node:
  id: dummy
  cluster: xyz
  locality:
    zone: nowhere
